--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
 <body>
     <div class="container">
         <div class="link-container">
-            <a href="#">Допомога</a>
-            <a href="#">Про нас</a>
-            <a href="#">Підтримати</a>
-            <a href="#">Безпека</a>
-            <a href="#">Правила</a>
+            <a href="help.html">Допомога</a>
+            <a href="about.html">Про нас</a>
+            <a href="support.html">Підтримати</a>
+            <a href="security.html">Безпека</a>
+            <a href="rules.html">Правила</a>
         </div>
+        
         <h1>Ласкаво просимо FurryFriend Bot!</h1>
         <p>Знайдіть ідеального компаньйона для себе та свого пухнастого друга.</p>
         <p>Тут ви можете ознайомитися з функціоналом нашого бота.</p>
