--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #c12c2c;
             color: #333;
             background-image: url('images/background.jpg');
             background-size: cover;
@@ -21,24 +21,49 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgb(243, 237, 237);
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            height: 162vh; /* Встановлення висоти контейнера на висоту всього екрану */
+            box-shadow: 0 0 10px rgba(188, 71, 71, 0.1);
+            height: 242vh; /* Встановлення висоти контейнера на висоту всього екрану */
         }
+        
         h1, h2, p {
             text-align: center;
             color: #333;
         }
         .link-container {
-            text-align: right; /* Вирівнюємо кнопки по правому краю */
-            margin-bottom: 20px; /* Додано відступ під кнопками */
+            text-align: center; /* Змінено вирівнювання на центр */
+            margin-bottom: 20px; /* Збережено відступ під кнопками */
         }
         .link-container a {
             margin-left: 10px; /* Задаємо відступи між кнопками */
             text-decoration: none;
             color: #0088cc;
         }
+        .link-container a:hover i {
+            color: #FF5733; /* Змінює колір іконок при наведенні на будь-яке посилання */
+        }
+
+        .tech-support a:hover i {
+            color: #33ff5f; /* Змінює колір іконок при наведенні на посилання технічної підтримки */
+        }
+
+        #botLinkContainer a:hover i {
+            color: #b71919; /* Змінює колір іконок при наведенні на посилання на телеграм */
+        }
+
+        .link-container a:hover {
+            color: #FF5733; /* Змінює колір тексту кнопок при наведенні на будь-яке посилання */
+        }
+
+        .tech-support a:hover {
+            color: #33ff5f; /* Змінює колір тексту кнопок при наведенні на посилання технічної підтримки */
+        }
+
+        #botLinkContainer a:hover {
+            color: #FF5733; /* Змінює колір тексту кнопок при наведенні на посилання на телеграм */
+        }
+
         .tech-support i {
             font-size: 30px;
             margin: 0 10px;
@@ -66,10 +91,32 @@
         <div class="image-container">
             <img src="images/two_dog_love.jpg" alt="Two dogs in love" style="border-radius: 8px; width: 100%; height: auto;">
         </div>
+        <p>Натисніть на кнопку нище, щоб перейти на бота</p>
         <div class="link-container" id="botLinkContainer">
             <a href="https://t.me/FurryFriendBot"><i class="fab fa-telegram fa-9x" ></i></a>
         </div>
         <p class="bot-description">FurryFriend – це Telegram-бот, де власники домашніх тварин можуть спілкуватися та знайомити своїх пухнастих компаньйонів один з одним.</p>
+
+        <!-- Додали інформацію про бота -->
+        <div class="bot-info">
+            <h2>Мета:</h2>
+            <p>FurryFriend Bot створений з метою полегшення пошуку і спілкування між власниками домашніх тварин. Онлайн-спільнота власників тварин може використовувати цей бот для знаходження ідеальних компаньйонів для своїх пухнастих друзів.</p>
+
+            <h2>Функції:</h2>
+            <ul>
+                <li><strong>Пошук Партнера:</strong> Користувачі можуть шукати інших власників тварин для спілкування та можливого спільного проведення часу з їх тваринами.</li>
+                <li><strong>Спільнота:</strong> FurryFriend Bot об'єднує власників тварин у велику спільноту, де вони можуть обмінюватися порадами, досвідом і фотографіями своїх домашніх улюбленців.</li>
+                <li><strong>Інформаційні Ресурси:</strong> Бот може також надавати корисну інформацію щодо догляду, виховання та здоров'я тварин.</li>
+                <li><strong>Технічна Підтримка:</strong> Наявні посилання на соціальні мережі для технічної підтримки, що дозволяє користувачам звертатися за допомогою чи задавати питання.</li>
+            </ul>
+
+            <h2>Для кого:</h2>
+            <ul>
+                <li><strong>Власники Тварин:</strong> Основна аудиторія - це власники домашніх тварин, які шукають можливості для спілкування, знайомства з новими людьми та їх тваринами.</li>
+                <li><strong>Тваринні Любителі:</strong> Люди, які цікавляться тваринами, але ще не мають своєї, також можуть користуватися ботом для отримання інформації та спілкування з власниками тварин.</li>
+                <li><strong>Технічна Підтримка:</strong> Ця функція адресована всім користувачам бота, які потребують допомоги або мають запитання щодо його використання.</li>
+            </ul>
+        </div>
         <!-- Розділ для технічної підтримки з іконками Font Awesome -->
         <div class="tech-support">
             <span>Technical Support:</span>
